--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,23 +1,16 @@
 FROM golang
 
-# if left blank app will run with dev settings
-# to build production image run:
-# $ docker build ./api --build-args app_env=production
 ARG app_env
 ENV APP_ENV $app_env
 
-# it is okay to leave user/GoDoRP as long as you do not want to share code with other libraries
-COPY . /go/src/github.com/user/GoDoRP/api
-WORKDIR /go/src/github.com/user/GoDoRP/api
+COPY . /go/src/github.com/user/GoNeo/api
+WORKDIR /go/src/github.com/user/GoNeo/api
 
-# added vendor services will need to be included here
 RUN go get ./vendor/database
 
 RUN go get ./
 RUN go build
 
-# if dev setting will use pilu/fresh for code reloading via docker-compose volume sharing with local machine
-# if production setting will build binary
 CMD if [ ${APP_ENV} = production ]; \
 	then \
 	api; \
